k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: websocket-service
spec:
  selector:
    app: websocket
  ports:
    - protocol: TCP
      port: 8765
      targetPort: 8765
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
